[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scrips/portalblue.gd" type="Script" id=1]
[ext_resource path="res://Elementos/tecla e.png" type="Texture" id=2]
[ext_resource path="res://Elementos/Portales/Portal-Transparent-blue.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 64.0
height = 96.0

[node name="pAzul" type="Node2D"]

[node name="portalblue" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Portal-Transparent-blue" type="Sprite" parent="portalblue"]
position = Vector2( 1.90735e-06, 4 )
scale = Vector2( 0.428094, 0.353357 )
texture = ExtResource( 3 )

[node name="TeclaE" type="Sprite" parent="portalblue"]
visible = false
position = Vector2( 0, -152 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="portalblue"]
shape = SubResource( 1 )

[connection signal="body_shape_entered" from="portalblue" to="portalblue" method="_on_portalblue_body_shape_entered"]
[connection signal="body_shape_exited" from="portalblue" to="portalblue" method="_on_portalblue_body_shape_exited"]
